--- a/style.css
+++ b/style.css
@@ -91,3 +91,51 @@ h1 span:nth-child(13){
 
 
 
+
+
+
+@media (max-width: 1024px) {
+    .smoke {
+        font-size: 4rem;
+    }
+
+    h1 span {
+        margin-top: 250px;
+        width: 20px;
+    }
+
+    .video {
+        height: 700px;
+    }
+}
+
+@media (max-width: 768px) {
+    .smoke {
+        font-size: 3rem;
+    }
+
+    h1 span {
+        margin-top: 100px;
+        width: 20px;
+    }
+
+    .video {
+        height: 500px;
+    }
+}
+
+@media (max-width: 480px) {
+    .smoke {
+        font-size: 2rem;
+        -webkit-text-stroke: 2px whitesmoke;
+    }
+
+    h1 span {
+        margin-top: 100px;
+        width: 20px;
+    }
+
+    .video {
+        height: 400px;
+    }
+}
