--- a/style.css
+++ b/style.css
@@ -7,10 +7,9 @@ section{
     height: 200px;
     background-color: black;
 }
-.smoke{
+.smoke {
     margin: 0;
-    
-    height: 800px;
+    height: 100vh; /* Cover the full height of the viewport */
     padding: 0;
     position: absolute;
     top: 50%;
@@ -22,7 +21,7 @@ section{
     font-size: 5rem;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.2rem;
-    z-index: 0;
+    z-index: 1; /* Ensure it appears above the video */
 }
 .video{
     width: 100%;
@@ -97,6 +96,10 @@ h1 span:nth-child(13){
 @media (max-width: 1024px) {
     .smoke {
         font-size: 4rem;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     h1 span {
@@ -112,6 +115,10 @@ h1 span:nth-child(13){
 @media (max-width: 768px) {
     .smoke {
         font-size: 3rem;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     h1 span {
@@ -128,6 +135,10 @@ h1 span:nth-child(13){
     .smoke {
         font-size: 2rem;
         -webkit-text-stroke: 2px whitesmoke;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     h1 span {
