--- a/styles.css
+++ b/styles.css
@@ -445,6 +445,175 @@ span{
     width: 80%;
     background-color: fuchsia;
 }
+
+
+.edu-heading{
+    font-size: 8rem;
+    text-align: center;
+    margin: 5rem 0;
+}
+
+.education{
+    padding: 100px 15px;
+    background: red;
+}
+
+.education h2{
+    margin-bottom: 5rem;
+}
+
+.timeline-items{
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.timeline-items::before{
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: rgb(236, 185, 224);
+    left: calc(50% - 1px);
+}
+
+.timeline-item{
+    margin-bottom: 40px;
+    width: 100%;
+    position: relative;
+}
+
+.timeline-item:last-child{
+    margin-bottom: 0;
+}
+
+.timeline-item:nth-child(odd){
+    padding-right: calc(50% + 30px);
+    text-align: right;
+}
+
+.timeline-item:nth-child(even){
+    padding-left: calc(50% + 30px);
+}
+
+.timeline-dot{
+    height: 21px;
+    width: 21px;
+    background-color: rgb(236, 185, 224);
+    box-shadow: 0 0 25px rgba(236, 185, 224, 0.233),
+                0 0 25px rgba(236, 185, 224, 0.281),
+                0 0 25px rgba(236, 185, 224, 0.226);
+    position: absolute;
+    left: calc(50% - 8px);
+    border-radius: 50%;
+    top: 10px;
+}
+
+.timeline-date{
+    font-size: 30px;
+    font-weight: 800;
+    color: pink;
+    margin: 6px 0 15px;
+}
+
+.timeline-content{
+    background-color: white;
+    border: 3px solid rgb(236, 185, 224);
+    padding: 30px 50px;
+    border-radius: 4rem;
+    box-shadow: 0 0 10px rgb(236, 185, 224);
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+
+.timeline-content:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 25px rgb(236, 185, 224),
+                0 0 25px rgb(236, 185, 224),
+                0 0 25px rgb(236, 185, 224);
+}
+
+.timeline-content h3{
+    font-size: 30px;
+    color: rgb(255, 0, 43);
+    margin:  0 0 10px;
+    font-weight: 500;
+}
+
+.timeline-content p{
+    color: black;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 22px;
+}
+
+
+
+.testimonials-box{
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.testimonials .heading{
+    margin-bottom: 5rem;
+
+}
+
+.testimonials-box img{
+    width: 15rem;
+    border-radius: 50%;
+    border: 3px solid white;
+    box-shadow: 0 0 25px black;
+}
+
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 3rem;
+}
+
+.testimonial-item{
+    min-height: 550px;
+    max-width: 450px;
+    background: rgb(236, 185, 224);
+    border: 3px solid white;
+    border-radius: 2rem;
+    padding: 30px 60px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1.5rem;
+    color: white;
+    transition: 0.4s ease-in-out;
+}
+
+.testimonial-item:hover{
+    border: 3px solid black;
+    transform: translateY(-10px)scale(1.03);
+    box-shadow: 0 0 50px white;
+}
+
+.testimonial-item h2{
+    font-size: 3rem;
+}
+
+.testimonial-item p{
+    font-size: 2rem;
+}
+
+.rating i{
+    color: gold;
+    font-size: 2rem;
+}
+
 .contact{
     background-color: var(--main-color);
     height: 897px;
