--- a/styles.css
+++ b/styles.css
@@ -746,12 +746,25 @@ span{
         flex-direction: column;
     }
       .testimonial-item h2{
-        font-size: 1rem;
+        font-size: 2.5rem;
     }
     
     .testimonial-item p{
         font-size: 1.5rem;
     }
+    .timeline-content h3{
+    font-size: 20px;
+    color: rgb(255, 0, 43);
+    margin:  0 0 10px;
+    font-weight: 500;
+}
+
+.timeline-content p{
+    color: black;
+    font-size: 10px;
+    font-weight: 300;
+    line-height: 22px;
+}
     
     
 }
