--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ span{
 }
 .navbar a:hover{
     border-bottom: 3px solid rgb(0, 174, 255);
-    color:rgb(0, 174, 255);
+    color: white;
 }
 .section{
     height: 100vh;
